--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HELLO</title>
+    <title>HAO_QUAN</title>
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <div class = "header">
+    <div class="header">
       <h1 class="title">NHẬP PASS ĐI NGƯỜI ĐẸP</h1>
     </div>
 
     <div class="container">
       <div class="content">
-        <div class = "avatar">
+        <div class="avatar">
           <!-- Bạn có thể thay thế bằng hình ảnh thật -->
-        <img src="avatar.jpg" alt="Avatar" class="avatar-img" />
+          <img src="avatar.jpg" alt="Avatar" class="avatar-img" />
         </div>
 
         <div class="keypad">
