--- a/wish.html
+++ b/wish.html
@@ -190,7 +190,7 @@
         }
       }
 
-      setInterval(drawRainBackground, 50);
+      setInterval(drawRainBackground, 100);
     </script>
     <script>
       var S = {
@@ -369,7 +369,7 @@
                   );
               }
             },
-            2000,
+            3000,
             sequence.length
           );
         }
@@ -778,7 +778,8 @@
         document.body.appendChild(overlay);
       }
 
-      const audio = new Audio('./musi.mp3');
+      const audio = new Audio('./tyca.mp3');
+      audio.currentTime = 15; // Bắt đầu từ giây thứ 10
       function handleClick() {
         audio.play();
         window.removeEventListener('click', handleClick);
